# NRD

./: .gitignore  1-Deploy.bat  1-Deploy.sh  2-Build.bat  3-PrepareSDK.bat  3-PrepareSDK.sh  CMakeLists.txt  README.md  UPDATE.md
.github/workflows/: build.yml
Include/: NRD.h  NRDDescs.h  NRDSettings.h
Integration/: NRDIntegration.h  NRDIntegration.hpp
Resources/: Version.h
Shaders/: Clear.resources.hlsli  Common.hlsli  NRD.hlsli  REBLUR_Blur.cs.hlsl  REBLUR_Blur.resources.hlsli  REBLUR_ClassifyTiles.cs.hlsl  REBLUR_Common.hlsli  REBLUR_Common_DiffuseSpatialFilter.hlsli  REBLUR_Common_SpatialFilter.hlsli  REBLUR_Common_SpecularSpatialFilter.hlsli  REBLUR_Config.hlsli  REBLUR_HistoryFix.cs.hlsl  REBLUR_HistoryFix.resources.hlsli  REBLUR_HitDistReconstruction.cs.hlsl  REBLUR_HitDistReconstruction.resources.hlsli  REBLUR_PostBlur.cs.hlsl  REBLUR_PostBlur.resources.hlsli  REBLUR_PrePass.cs.hlsl  REBLUR_PrePass.resources.hlsli  REBLUR_SplitScreen.cs.hlsl  REBLUR_SplitScreen.resources.hlsli  REBLUR_TemporalAccumulation.cs.hlsl  REBLUR_TemporalAccumulation.resources.hlsli  REBLUR_TemporalStabilization.cs.hlsl  REBLUR_TemporalStabilization.resources.hlsli  REBLUR_Validation.cs.hlsl  REFERENCE_TemporalAccumulation.resources.hlsli  RELAX_AntiFirefly.cs.hlsl  RELAX_AntiFirefly.resources.hlsli  RELAX_Atrous.cs.hlsl  RELAX_Atrous.resources.hlsli  RELAX_AtrousSmem.cs.hlsl  RELAX_AtrousSmem.resources.hlsli  RELAX_ClassifyTiles.cs.hlsl  RELAX_Common.hlsli  RELAX_Config.hlsli  RELAX_Copy.cs.hlsl  RELAX_Copy.resources.hlsli  RELAX_HistoryClamping.cs.hlsl  RELAX_HistoryClamping.resources.hlsli  (+21 more)
Shaders/Include/: Common.hlsli  NRD.hlsli  REBLUR_Common.hlsli  REBLUR_Common_DiffuseSpatialFilter.hlsli  REBLUR_Common_SpecularSpatialFilter.hlsli  REBLUR_Config.hlsli  REBLUR_HistoryFix.hlsli  REBLUR_PrePass.hlsli  REBLUR_TemporalAccumulation.hlsli  REBLUR_TemporalStabilization.hlsli  RELAX_Config.hlsli  RELAX_PrePass.hlsli  RELAX_TemporalAccumulation.hlsli  SIGMA_Config.hlsli
Source/: InstanceImpl.cpp  InstanceImpl.h  Reblur.cpp  Reference.cpp  Relax.cpp  Sigma.cpp  StdAllocator.h  Wrapper.cpp
Source/Denoisers/: Reblur_Diffuse.hpp  Reblur_DiffuseDirectionalOcclusion.hpp  Reblur_DiffuseOcclusion.hpp  Reblur_DiffuseSh.hpp  Reblur_DiffuseSpecular.hpp  Reblur_DiffuseSpecularOcclusion.hpp  Reblur_DiffuseSpecularSh.hpp  Reblur_Specular.hpp  Reblur_SpecularOcclusion.hpp  Reblur_SpecularSh.hpp  Reference.hpp  Relax_Diffuse.hpp  Relax_DiffuseSh.hpp  Relax_DiffuseSpecular.hpp  Relax_DiffuseSpecularSh.hpp  Relax_Specular.hpp  Relax_SpecularSh.hpp
